--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 
   <ul>
  <li><a href="https://indd.adobe.com/view/9492a2af-5c66-4ade-8847-fd6ebb34d50c/">
-   <img src="https://1drv.ms/i/c/23642a0a4327aa07/ETJsv05E139Fr0Ov9doTwqQBSEmRjlTPyj3fDNpZXHHSgQ?e=yptIeb" alt="Lesson One!">
+   <img src="lessonOne.jpg" alt="Lesson One!">
  </a> </li>
 
 
- <li><a href="https://indd.adobe.com/view/9492a2af-5c66-4ade-8847-fd6ebb34d50c/">
-    <img src="https://1drv.ms/i/c/23642a0a4327aa07/EajgVtXn94NOo_8_lKN4cdgBoU2zCAKXaSLOIWxeHiM8sQ?e=Ly1ZIm" alt="Lesson Two!">
+ <li><a href="https://indd.adobe.com/view/b8856a6d-89d0-4226-b579-2dfe9f91f368/">
+    <img src="LessonTwo.jpg" alt="Lesson Two!">
  </a> </li>
 
 
- <li><a href="https://indd.adobe.com/view/9492a2af-5c66-4ade-8847-fd6ebb34d50c/">
-  <img src="https://1drv.ms/i/c/23642a0a4327aa07/EUXDL9KZFRhMuNWVYmE6E_kBnaAMuasZf5O33AjEjhSRyA?e=0IOjvG" alt="Lesson Three!">
+ <li><a href="https://indd.adobe.com/view/41960401-6162-439a-a7ae-9c96f16928db/">
+  <img src="LessonThree.jpg" alt="Lesson Three!">
 </a> </li>
  </ul>    
  
