--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
  <body>  
     <h2>Dari Lessons</h2>
 
-  <ul>
- <li><a href="https://indd.adobe.com/view/9492a2af-5c66-4ade-8847-fd6ebb34d50c/">
-   <img src="lessonOne.jpg" alt="Lesson One!">
- </a> </li>
+ <style>
+  .lesson-links {
+    font-size: 24px; 
+    font-weight: bold;
+  }
+</style>
 
-
- <li><a href="https://indd.adobe.com/view/b8856a6d-89d0-4226-b579-2dfe9f91f368/">
-    <img src="LessonTwo.jpg" alt="Lesson Two!">
- </a> </li>
-
-
- <li><a href="https://indd.adobe.com/view/41960401-6162-439a-a7ae-9c96f16928db/">
-  <img src="LessonThree.jpg" alt="Lesson Three!">
-</a> </li>
- </ul>    
- 
+<ul>
+       <li><a class="lesson-links" href="https://indd.adobe.com/view/9492a2af-5c66-4ade-8847-fd6ebb34d50c/"  target="new" class="dropdown-item">Lesson One</a>  </li>
+       <li><a class="lesson-links" href="https://indd.adobe.com/view/b8856a6d-89d0-4226-b579-2dfe9f91f368/" target="new" class="dropdown-item" >Lesson Two</a>  </li>
+       <li><a class="lesson-links" href="https://indd.adobe.com/view/41960401-6162-439a-a7ae-9c96f16928db/" target="new" class="dropdown-item" >Lesson Three</a></li> 
+       <li><a class="lesson-links" href="https://indd.adobe.com/view/6a5f252e-4608-4046-92e4-539a12027348/" target="new" class="dropdown-item">Lesson Four</a>  </li>
+			 <li><a class="lesson-links" href="https://indd.adobe.com/view/22a8f6a8-7b08-45bc-9b7a-2c036ded4b66/" target="new" class="dropdown-item">Lesson Five</a>  </li>
+			 <li><a class="lesson-links" href="https://indd.adobe.com/view/e4089669-8595-43c8-a182-995409b0a1f9/" target="new" class="dropdown-item">Lesson Six</a>   </li>
+			 <li><a class="lesson-links" href="https://indd.adobe.com/view/c0f82ff6-9251-45a0-af36-494fbeaf2ab2/" target="new" class="dropdown-item">Lesson Seven</a> </li>
+			 <li><a class="lesson-links" href="https://indd.adobe.com/view/20570ef4-cb36-4fbc-8ed9-24cb03b8931c/" target="new" class="dropdown-item">Lesson Eight</a> </li>
+			 <li><a class="lesson-links" href="https://indd.adobe.com/view/bc968b94-1d6c-4405-a4f1-8d849bf8d3d8/" target="new" class="dropdown-item">Lesson Nine</a>  </li>
+		   <li><a class="lesson-links" href="https://indd.adobe.com/view/3f3cc44a-d4a5-448e-9b94-865ffa1a06ae/" target="new" class="dropdown-item">Lesson Ten</a>   </li>
+</ul>
      
   </body>
-</html>
+</html>     
+
