--- a/index.html
+++ b/index.html
@@ -17,9 +17,84 @@
   .lesson-links {
     font-size: 24px; 
     font-weight: bold;
+  } 
+  .intro {
+    font-size: 22px;
+    color: darkgreen;
+  }
+  .note {
+    font-size: 20px;
+    color: #555;
+    font-style: italic;   
+    font-weight:bold;
+  }
+  .mail{
+    color: "red"
+   }
+</style>     
+
+   
+<p class="intro">Hi,</p>
+<p class="note">
+These lessons were made using Adobe software. 
+The URLs are saved on Adobe side and unfortunatly I don't have
+access to them anymore, but until now they are
+working and hope they work for a while. 
+I will try to add new lessons using the current
+software I have. Alse the link to my email at 
+top of each page is no longer valid, my email 
+now is <span style="color: red;"> kwahidi@gmail.com </span>, in case you have any 
+questions or suggestions.
+Hope you enjoy the lessons and learn something.      
+</p>
+<p class="intro">Thanks </p>
+<p class="intro">Khaliq Wahidi </p>    
+
+   
+<!-- <style>
+  .lesson-info {
+    width: 400px; /* Limits the width */
+    padding: 10px;
+    font-size: 22px;
+    line-height: 1.5;
+    border: 1px solid #ddd;
+    background-color: #f9f9f9;
+    text-align: left; /* Ensures left alignment */
   }
 </style>
 
+<div class="lesson-info">
+  <p>Hi,<br>
+  These lessons were made using Adobe software. The URLs are saved on Adobe's side, and I no longer have access to them. However, they still work for now, and I hope they continue to do so. I will try to add new lessons using my current software.</p>
+  <p>Also, the email link at the top of each page is no longer valid. My current email is <strong>kwahidi@gmail.com</strong>, in case you have any questions or suggestions.</p>
+  <p>Hope you enjoy the lessons and learn something!</p>   
+  <p>Thanks</p>
+  <p>Khaliq Wahidi</p>
+</div> -->
+ 
+
+<!-- <style>
+  .lesson-container {
+    display: flex;
+    flex-direction: column; /* Stacks items vertically */
+    align-items: flex-start; /* Aligns text to the left */
+    width: 400px; /* Controls line width */
+    padding: 10px;
+    font-size: 18px;
+    line-height: 1.5;
+    border: 1px solid #ddd;
+    background-color: #f9f9f9;
+  }
+</style>
+
+<div class="lesson-container">
+  <p>Hi,</p>
+  <p>These lessons were made using Adobe software. The URLs are saved on Adobe's side, and I no longer have access to them. However, they still work for now, and I hope they continue to do so. I will try to add new lessons using my current software.</p>
+  <p>Also, the email link at the top of each page is no longer valid. My current email is <strong>kwahidi@gmail.com</strong>, in case you have any questions or suggestions.</p>
+  <p>Hope you enjoy the lessons and learn something!</p>    
+  <p>Thanks</p>
+  <p>Khaliq Wahidi</p>
+</div> -->
 <ul>
        <li><a class="lesson-links" href="https://indd.adobe.com/view/9492a2af-5c66-4ade-8847-fd6ebb34d50c/"  target="new" class="dropdown-item">Lesson One</a>  </li>
        <li><a class="lesson-links" href="https://indd.adobe.com/view/b8856a6d-89d0-4226-b579-2dfe9f91f368/" target="new" class="dropdown-item" >Lesson Two</a>  </li>
