--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ The URLs are saved on Adobe side and unfortunatly I don't have
 access to them anymore, but until now they are
 working and hope they work for a while. 
 I will try to add new lessons using the current
-software I have. Alse the link to my email at 
+software I have. Also the link to my email at 
 top of each page is no longer valid, my email 
 now is <span style="color: red;"> kwahidi@gmail.com </span>, in case you have any 
 questions or suggestions.
