--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@ working and hope they work for a while.
 I will try to add new lessons using the current
 software I have. Also the link to my email at 
 top of each page is no longer valid, my email 
-now is <span style="color: red;"> kwahidi@gmail.com </span>, in case you have any 
+now is  <a href="mailto:kwahidi@gmail.com" style="color: darkred; font-weight: bold;">kwahidi@gmail.com</a>, in case you have any  
 questions or suggestions.
 Hope you enjoy the lessons and learn something.      
 </p>
 <p class="intro">Thanks </p>
 <p class="intro">Khaliq Wahidi </p>    
-
+ 
    
 <!-- <style>
   .lesson-info {
@@ -94,7 +94,8 @@ Hope you enjoy the lessons and learn something.
   <p>Hope you enjoy the lessons and learn something!</p>    
   <p>Thanks</p>
   <p>Khaliq Wahidi</p>
-</div> -->
+</div> --> 
+<!-- now is <span style="color: red;"> kwahidi@gmail.com </span>, in case you have any -->  
 <ul>
        <li><a class="lesson-links" href="https://indd.adobe.com/view/9492a2af-5c66-4ade-8847-fd6ebb34d50c/"  target="new" class="dropdown-item">Lesson One</a>  </li>
        <li><a class="lesson-links" href="https://indd.adobe.com/view/b8856a6d-89d0-4226-b579-2dfe9f91f368/" target="new" class="dropdown-item" >Lesson Two</a>  </li>
